NetBSD Problem Report #55962

From gson@gson.org  Thu Jan 28 18:18:18 2021
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id AECB81A9239
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 28 Jan 2021 18:18:18 +0000 (UTC)
Message-Id: <20210128181814.4C57B253EDE@guava.gson.org>
Date: Thu, 28 Jan 2021 20:18:14 +0200 (EET)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: Some tar(1) error messages lack file name and newline
X-Send-Pr-Version: 3.95

>Number:         55962
>Category:       bin
>Synopsis:       Some tar(1) error messages lack file name and newline
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jan 28 18:20:00 +0000 2021
>Closed-Date:    Fri Jan 29 06:02:29 +0000 2021
>Last-Modified:  Fri Jan 29 06:02:29 +0000 2021
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date 2021.01.28.11.45.31
>Organization:
>Environment:
System: NetBSD
Architecture: x86_64
Machine: amd64
>Description:

I am getting error messages like these from the -current tar(1):

  : tar format cannot archive socket: tar format cannot archive socket: tar format cannot archive socket: tar format cannot archive socket: tar format cannot archive socket: tar format cannot archive socket

That is, the messages are missing a terminating newline, as well as
whatever is supposed to go before the initial colon, presumably the
name of the file that could not be archived.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55962 CVS commit: src/external/bsd/libarchive/dist/tar
Date: Thu, 28 Jan 2021 14:42:27 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Thu Jan 28 19:42:27 UTC 2021

 Modified Files:
 	src/external/bsd/libarchive/dist/tar: write.c

 Log Message:
 PR/55962: Andreas Gustafsson: Some tar(1) error messages lack file name and
 newline


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.5 -r1.2 src/external/bsd/libarchive/dist/tar/write.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Fri, 29 Jan 2021 06:02:29 +0000
State-Changed-Why:
Confirmed fixed, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.